news roles and model, news routes
